  The older API ([Ctype.(begin_def,end_def)], [Typetexp.(narrow,widen)], etc.)
  is now removed.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #11568: Encode inline record types in Path.t
  (Leo White and Hyunggyu Jang, review by Gabriel Scherer)

- #11569: Remove hash type encoding
  (Hyunggyu Jang, review by Gabriel Scherer and Florian Angeletti)

- #11601, #11612, #11628, #11613, #11623: Clean up some global state handling
  in emitcode, bytepackager, bytegen, bytesections, spill.
  (Hugo Heuzard, Stefan Muenzel, review by Vincent Laviron, Gabriel Scherer
   and Nathanaëlle Courant)

- #11627: use return values instead of globals for linear scan intervals
  (Stefan Muenzel, review by Nicolás Ojeda Bär)

- #11634: Dll.open_dll now properly handle opening for execution while already
  opened for checking
  (Hugo Heuzard, review by Nicolás Ojeda Bär)

- #11745: Debugger and toplevels: embed printer types rather than
  reading their representations from topdirs.cmi at runtime.
  (Sébastien Hinderer, review by Florian Angeletti, Nicolás Ojeda Bär and
  Gabriel Scherer)

- #11615: remove global variables form asmcomp/linearize.ml
  (Stefan Muenzel, review by Nicolás Ojeda Bär

- #10856: Add location, attribute(s) visitors to Tast_mapper/Tast_iterator
  (Yan Dong, review by Nicolás Ojeda Bär and Gabriel Scherer)

- #11763, #11759, #11861: Enable stricter C compilation warnings, use
  strict prototypes on primitives.
  (Antonin Décimo, review by Xavier Leroy, David Allsopp and Sébastien
  Hinderer)

- #11933: Use the correct machtype when reading the code pointer from closures
  (Nathanaëlle Courant, review by Gabriel Scherer and Vincent Laviron)

- #11972: refactor runtime/frame_descriptors.c
  in preparation for quadratic-time fix
  (Gabriel Scherer, review by Enguerrand Decorne)

- #11997: translate structured constants into their Obj.t representation
  at compile time rather than link time. Changes the way dumpobj prints